[package]
name = "new_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_ui = "0.16.1"
bevy_text = "0.16.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Release profile optimizations
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# WASM-specific release profile
[profile.wasm-release]
inherits = "release"
opt-level = "z"  # Optimize for size
lto = "fat"
codegen-units = 1
strip = true
